--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,5 +27,5 @@
     <color name="Entries">#30950E</color>
 
     <color name="Disable">#CFCCCC</color>
-    <color name="confirm">#DDFFBB</color>
+    <color name="confirm">#A5F0A3</color>
 </resources>
