--- a/app/src/main/res/drawable/container_add_button.xml
+++ b/app/src/main/res/drawable/container_add_button.xml
@@ -1,6 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/Entries" />
-    <corners android:radius="10dp" />
-    <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <application android:theme="@style/disable_button" />
+            <solid android:color="@color/Disable" />
+            <corners android:radius="10dp" />
+            <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
+        </shape>
+    </item>
+    <item android:state_enabled="true"
+        android:color = "@color/confirm">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <solid android:color="@color/confirm" />
+            <corners android:radius="10dp" />
+            <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
+        </shape>
+    </item>
+</selector>
