--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,19 +27,22 @@
 </style>
 
 
-    <style name="add_button">
-        <item name="android:background">@color/Entries</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
+<style name="add_button" parent="Widget.MaterialComponents.Button">
+    <item name="backgroundTint">@color/confirm</item>
+    <item name="android:textColor">@color/white</item>
+    <item name="android:state_enabled">true</item>
 
-    <style name="disable_button">
-        <item name="android:background">@color/Disable</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
+</style>
 
-   <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
-       <item name="android:src">@drawable/menu_home</item>
-   </style>
+<style name="disable_button" parent="Widget.MaterialComponents.Button">
+    <item name="backgroundTint">@color/Disable</item>
+    <item name="android:textColor">@color/white</item>
+    <item name="android:state_enabled">false</item>
+</style>
+
+<style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
+   <item name="android:src">@drawable/menu_home</item>
+</style>
 
 <style name="TextStyle">
 
