--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,6 +19,12 @@
         <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
     </style>
 
+
+    <style name = "toolbar">
+        <item name="backgroundTint">?attr/colorPrimary</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="delete_button">
         <item name="backgroundTint">@color/Exits</item>
         <item name="android:textColor">@color/white</item>
@@ -45,6 +51,10 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
 
+    </style>
+
+    <style name="MenuStyle_update" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:src">@drawable/basket_dark</item>
     </style>
 
     <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
