--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,48 +1,57 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-<!-- Base application theme. -->
-<style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/cobalt</item>
-    <item name="colorPrimaryVariant">@color/indaco</item>
-    <item name="colorOnPrimary">@color/white</item>
-    <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/violet</item>
-    <item name="colorSecondaryVariant">@color/lilla</item>
-    <item name="colorOnSecondary">@color/black</item>
-    <!-- Status bar color. -->
-    <item name="android:statusBarColor">?attr/colorSecondary</item>
-    <!-- Customize your theme here. -->
-    <item name="colorBackgroundFloating">?attr/colorPrimary</item>
-    <item name="backgroundColor">?attr/colorPrimaryVariant</item>
-    <item name="colorContainer">?attr/colorSecondary</item>
-    <!-- Customize app_bar. -->
-    <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
+    <!-- Base application theme. -->
+    <style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/cobalt</item>
+        <item name="colorPrimaryVariant">@color/indaco</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/violet</item>
+        <item name="colorSecondaryVariant">@color/lilla</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorSecondary</item>
+        <!-- Customize your theme here. -->
+        <item name="colorBackgroundFloating">?attr/colorPrimary</item>
+        <item name="backgroundColor">?attr/colorPrimaryVariant</item>
+        <item name="colorContainer">?attr/colorSecondary</item>
+        <!-- Customize app_bar. -->
+        <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
+    </style>
 
 
+    <style name = "toolbar">
+        <item name="backgroundTint">?attr/colorPrimary</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
-</style>
-<style name="delete_button">
-    <item name="backgroundTint">@color/Exits</item>
-    <item name="android:textColor">@color/white</item>
-</style>
+    <style name="delete_button">
+        <item name="backgroundTint">@color/Exits</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 
-<style name="add_button" parent="Widget.MaterialComponents.Button">
-    <item name="backgroundTint">@color/confirm</item>
-    <item name="android:textColor">@color/white</item>
-    <item name="android:state_enabled">true</item>
+    <style name="add_button" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/confirm</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:state_enabled">true</item>
 
-</style>
+    </style>
 
-<style name="disable_button" parent="Widget.MaterialComponents.Button">
-    <item name="backgroundTint">@color/Disable</item>
-    <item name="android:textColor">@color/white</item>
-    <item name="android:state_enabled">false</item>
-</style>
+    <style name="disable_button" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/Disable</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:state_enabled">false</item>
+    </style>
 
-<style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
-   <item name="android:src">@drawable/menu_home</item>
-</style>
+    <style name="MenuStyle_update" parent="Widget.AppCompat.ActionButton.Overflow">
+       <item name="android:src">@drawable/basket_light</item>
+    </style>
+
+    <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:src">@drawable/menu_home</item>
+    </style>
+
 
 <style name="TextStyle">
 
