--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -15,7 +15,8 @@
         android:layout_marginHorizontal="15dp"
         android:paddingVertical="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/container_item">
+        android:background="@drawable/container_item"
+        android:tag="-1">
 
         <TextView
             android:id="@+id/category_item"
