set menu's icon color for theme mode

--- a/app/src/main/res/menu/menu_update_item.xml
+++ b/app/src/main/res/menu/menu_update_item.xml
@@ -4,6 +4,6 @@
     android:id="@+id/menu_update_item">
     <item android:id="@+id/remove_item"
         android:title="RemoveItem"
-        app:showAsAction="always"
-        android:icon="@drawable/basket_light" />
+        app:showAsAction="ifRoom"
+        style = "@style/MenuStyle_update" />
 </menu>
