--- a/app/src/main/res/menu/menu_empty.xml
+++ b/app/src/main/res/menu/menu_empty.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/menu_add_item">
+    android:id="@+id/menu_empty">
+    <item
+        android:id="@+id/backRoll"
+        app:showAsAction="ifRoom"
+        android:title="BackRoll"
+        />
 </menu>
