--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,8 +45,13 @@
     </style>
 
     <style name="MenuStyle_update" parent="Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:src">@drawable/basket_light</item>
+        <item name="android:icon">@drawable/basket_light</item>
     </style>
+
+    <style name="MenuStyle_empty" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:icon">@drawable/backroll_light</item>
+    </style>
+
 
     <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
         <item name="android:src">@drawable/menu_home</item>
