update contraint incoming color

--- a/app/src/main/res/layout/item_incoming.xml
+++ b/app/src/main/res/layout/item_incoming.xml
@@ -10,6 +10,7 @@
     android:background="?attr/selectableItemBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_incoming"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
