--- a/app/src/main/res/layout/item_incoming.xml
+++ b/app/src/main/res/layout/item_incoming.xml
@@ -19,11 +19,22 @@
         android:background="@drawable/container_item"
         android:tag="-1">
 
+        <View
+            android:id="@+id/cateogry_color"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/container_circle_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/category_item"
+            />
+
         <TextView
             android:id="@+id/category_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/cateogry_color"
             app:layout_constraintTop_toTopOf="parent"
             android:paddingStart="10dp"
             android:text="--"
@@ -40,8 +51,6 @@
             app:layout_constraintTop_toTopOf="parent"
             android:text="--"
             android:textSize="15sp" />
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
