--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,10 +3,10 @@
     <style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/cobalt</item>
-        <item name="colorPrimaryVariant">@color/indaco</item>
+        <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/violet</item>
+        <item name="colorSecondary">@color/indaco</item>
         <item name="colorSecondaryVariant">@color/lilla</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -18,6 +18,8 @@
         <!-- Customize app_bar. -->
         <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
     </style>
+
+
 
 
     <style name="toolbar">
