--- a/app/src/main/res/layout/item_incoming.xml
+++ b/app/src/main/res/layout/item_incoming.xml
@@ -20,7 +20,7 @@
         android:tag="-1">
 
         <View
-            android:id="@+id/cateogry_color"
+            android:id="@+id/category_color"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/container_circle_color"
@@ -34,7 +34,7 @@
             android:id="@+id/category_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/cateogry_color"
+            app:layout_constraintStart_toEndOf="@id/category_color"
             app:layout_constraintTop_toTopOf="parent"
             android:paddingStart="10dp"
             android:text="--"
@@ -46,7 +46,7 @@
             android:id="@+id/total_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/category_item"
+            android:paddingEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:text="--"
