--- a/app/src/main/res/layout/widget_app.xml
+++ b/app/src/main/res/layout/widget_app.xml
@@ -3,12 +3,13 @@
     style="@style/Widget.CasHelper.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.CasHelper.AppWidgetContainer">
+    android:theme="@style/Theme.CasHelper.AppWidgetContainer"
+    android:id="@+id/widget_container">
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/barChartWidget"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/pieChartWidget"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 </RelativeLayout>
