--- a/app/src/main/res/xml/widget_app_info.xml
+++ b/app/src/main/res/xml/widget_app_info.xml
@@ -3,12 +3,16 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/widget_app"
     android:initialLayout="@layout/widget_app"
-    android:minWidth="110dp"
+    android:minWidth="140dp"
     android:minHeight="110dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:previewLayout="@layout/widget_app"
     android:resizeMode="horizontal|vertical"
-    android:targetCellWidth="2"
+    android:targetCellWidth="3"
     android:targetCellHeight="2"
+    android:maxResizeWidth="570dp"
+    android:maxResizeHeight="450dp"
+    android:minResizeWidth="140dp"
+    android:minResizeHeight="110dp"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen" />
