--- a/app/src/main/res/layout/fragment_outflow.xml
+++ b/app/src/main/res/layout/fragment_outflow.xml
@@ -85,10 +85,14 @@
         android:layout_marginTop="5pt"
         >
         <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/chart_incoming"
+            android:id="@+id/chart_outflow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.5"
+
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
