--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -92,6 +92,7 @@
         app:layout_constraintStart_toEndOf="@id/category_select"
         app:layout_constraintTop_toBottomOf="@id/guideline1_add_item"
         app:layout_constraintBottom_toTopOf="@id/guideline2_add_item"
+        app:layout_constraintEnd_toEndOf="@id/guidelineDescriptionDX"
         android:gravity="center"
         />
 
