--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -98,4 +98,8 @@
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
 
+    <!--thumb switch-->
+    <color name="thumbTrue">#BEFF9C</color>
+    <color name="thumbFalse">#FF9C9C</color>
+
 </resources>
