--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -173,8 +173,7 @@
         android:text="@string/delete_button"
         style="@style/delete_button"
         />
-
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -182,26 +181,15 @@
         app:layout_constraintTop_toBottomOf="@id/guideline0_add_item"
         app:layout_constraintBottom_toTopOf="@id/guideline1_add_item"
         android:id="@+id/Switch_add_item"
+        android:checked="false"
+        android:textOff="@string/exits_add_item"
+        android:textOn="@string/incoming_add_item"
+        app:showText="true"
+        android:thumb="@drawable/switch_thumb"
+        app:track="@drawable/switch_track"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
         />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toLeftOf="@id/Switch_add_item"
-        android:text="@string/exits_add_item"
-        android:layout_marginRight="10pt"
-        android:theme="@style/TextStyle"
-        app:layout_constraintBaseline_toBaselineOf="@id/Switch_add_item"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/Switch_add_item"
-        android:text="@string/incoming_add_item"
-        android:layout_marginLeft="10pt"
-        android:theme="@style/TextStyle"
-        app:layout_constraintBaseline_toBaselineOf="@id/Switch_add_item"/>
-
 
 
 
