--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -62,6 +62,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.7"/>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineValueSX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.3"
+        />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineValueDX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.7"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -104,15 +118,18 @@
         android:inputType="numberDecimal"
         android:maxLength="12"
         app:layout_constraintBottom_toTopOf="@+id/guideline3_add_item"
-        app:layout_constraintStart_toStartOf="@+id/guidelineDescriptionSX"
+        app:layout_constraintStart_toStartOf="@+id/guidelineValueSX"
+        app:layout_constraintEnd_toStartOf="@id/euro"
         app:layout_constraintTop_toBottomOf="@id/guideline2_add_item"
         />
 
     <ImageView
+        android:id="@+id/euro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_euro"
         app:layout_constraintStart_toEndOf="@id/value_add_item"
+        app:layout_constraintEnd_toEndOf="@id/guidelineValueDX"
         app:layout_constraintBottom_toTopOf="@+id/guideline3_add_item"
         app:layout_constraintTop_toBottomOf="@id/guideline2_add_item"
         />
@@ -187,8 +204,8 @@
         app:showText="true"
         android:thumb="@drawable/switch_thumb"
         app:track="@drawable/switch_track"
-        android:scaleX="1.5"
-        android:scaleY="1.5"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         />
 
 
