--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -48,9 +48,21 @@
     <style name="TextStyle">
 
         <item name="android:textColor">?attr/colorOnSecondary</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
 
+    </style>
+
+    <style name="TitleStyle">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DateStyle">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="MenuStyle_update" parent="Widget.AppCompat.ActionButton.Overflow">
@@ -66,9 +78,4 @@
         <item name="android:src">@drawable/menu_home_dark</item>
     </style>
 
-    <style name="TitleStyle">
-    <item name="android:textColor">?attr/colorOnPrimary</item>
-    <item name="android:textSize">24sp</item>
-    <item name="android:textStyle">bold</item>
-    </style>
 </resources>
