--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -63,14 +63,20 @@
     <style name="TextStyle">
 
         <item name="android:textColor">?attr/colorOnSecondary</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
 
     </style>
 
     <style name="TitleStyle">
         <item name="android:textColor">?attr/colorOnSecondary</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DateStyle">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textSize">14dp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
