--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -135,6 +135,14 @@
         android:background="@drawable/container_home"
         android:layout_margin="10pt"
         android:scaleType="fitCenter">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/midline_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"/>
+
         <TextView
             android:id="@+id/entries_text_home"
             android:layout_width="wrap_content"
@@ -172,8 +180,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_entries_totale"
-            android:layout_marginStart="10pt"
-            app:layout_constraintLeft_toRightOf="@id/entries_text_home"
+            app:layout_constraintLeft_toRightOf="@id/midline_total"
             app:layout_constraintBaseline_toBaselineOf="@id/entries_text_home"
             android:theme="@style/TextStyle"
 
@@ -183,8 +190,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/exits_label"
-            android:layout_marginStart="12.5pt"
-            app:layout_constraintLeft_toRightOf="@id/exits_text_home"
+            app:layout_constraintLeft_toRightOf="@id/midline_total"
             app:layout_constraintBaseline_toBaselineOf="@id/exits_text_home"
             android:theme="@style/TextStyle"
             />
@@ -193,8 +199,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_entries_totale"
-            android:layout_marginStart="33pt"
-            app:layout_constraintLeft_toRightOf="@id/total_text_home"
+            app:layout_constraintLeft_toRightOf="@id/midline_total"
             app:layout_constraintBaseline_toBaselineOf="@id/total_text_home"
             android:theme="@style/TextStyle"
             />
