--- a/app/src/main/res/layout/popup_category_detail.xml
+++ b/app/src/main/res/layout/popup_category_detail.xml
@@ -20,10 +20,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="Transazioni effettuate:"
+            android:text="Entrate per la categoria selezionata:"
+            app:drawableStartCompat="@drawable/list_numbered_icon"
             android:drawablePadding="2dp"
             style="@style/TextAppearance.Material3.TitleMedium"
             android:textColor="@color/black" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -31,15 +34,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/container_home"
-        android:layout_marginStart="5pt"
-        android:layout_marginEnd="5pt"
+
         android:layout_marginTop="5pt"
         app:layout_constraintTop_toBottomOf="@id/container_title"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         >
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/recycler_view_popup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:theme="@style/TextStyle"
